# rescribe

./: AUDIT.md  CLAUDE.md  Cargo.toml  FORMATS.md  README.md  TESTING.md  TODO.md  flake.nix
crates/nodes/rescribe-math/: Cargo.toml
crates/nodes/rescribe-std/: Cargo.toml
crates/readers/rescribe-read-ansi/: Cargo.toml
crates/readers/rescribe-read-asciidoc/: Cargo.toml
crates/readers/rescribe-read-bbcode/: Cargo.toml
crates/readers/rescribe-read-biblatex/: Cargo.toml
crates/readers/rescribe-read-bibtex/: Cargo.toml
crates/readers/rescribe-read-commonmark/: Cargo.toml
crates/readers/rescribe-read-creole/: Cargo.toml
crates/readers/rescribe-read-csl-json/: Cargo.toml
crates/readers/rescribe-read-csv/: Cargo.toml
crates/readers/rescribe-read-djot/: Cargo.toml
crates/readers/rescribe-read-docbook/: Cargo.toml
crates/readers/rescribe-read-dokuwiki/: Cargo.toml
crates/readers/rescribe-read-endnotexml/: Cargo.toml
crates/readers/rescribe-read-endnotexml/src/: lib.rs
crates/readers/rescribe-read-epub/: Cargo.toml
crates/readers/rescribe-read-fb2/: Cargo.toml
crates/readers/rescribe-read-fountain/: Cargo.toml
crates/readers/rescribe-read-gfm/: Cargo.toml
crates/readers/rescribe-read-haddock/: Cargo.toml
crates/readers/rescribe-read-html/: Cargo.toml
crates/readers/rescribe-read-html/src/: html5ever_backend.rs  lib.rs  treesitter.rs
crates/readers/rescribe-read-html/tests/: pandoc_fixtures.rs
crates/readers/rescribe-read-ipynb/: Cargo.toml
crates/readers/rescribe-read-ipynb/src/: lib.rs
crates/readers/rescribe-read-jats/: Cargo.toml
crates/readers/rescribe-read-jira/: Cargo.toml
crates/readers/rescribe-read-latex/: Cargo.toml
crates/readers/rescribe-read-latex/src/: handwritten.rs  lib.rs  treesitter.rs
crates/readers/rescribe-read-man/: Cargo.toml
crates/readers/rescribe-read-markdown/: Cargo.toml
crates/readers/rescribe-read-markdown-strict/: Cargo.toml
crates/readers/rescribe-read-markdown/src/: lib.rs  pulldown.rs  treesitter.rs
crates/readers/rescribe-read-markdown/tests/: cross_format.rs  pandoc_fixtures.rs
crates/readers/rescribe-read-markua/: Cargo.toml
crates/readers/rescribe-read-mediawiki/: Cargo.toml
crates/readers/rescribe-read-multimarkdown/: Cargo.toml
crates/readers/rescribe-read-multimarkdown/src/: lib.rs
crates/readers/rescribe-read-muse/: Cargo.toml
crates/readers/rescribe-read-native/: Cargo.toml
crates/readers/rescribe-read-odt/: Cargo.toml
crates/readers/rescribe-read-opml/: Cargo.toml
crates/readers/rescribe-read-org/: Cargo.toml
crates/readers/rescribe-read-pandoc-json/: Cargo.toml
crates/readers/rescribe-read-pandoc-json/src/: lib.rs
crates/readers/rescribe-read-pdf/: Cargo.toml
crates/readers/rescribe-read-pod/: Cargo.toml
crates/readers/rescribe-read-pptx/: Cargo.toml
crates/readers/rescribe-read-ris/: Cargo.toml
crates/readers/rescribe-read-rst/: Cargo.toml
crates/readers/rescribe-read-rtf/: Cargo.toml
crates/readers/rescribe-read-t2t/: Cargo.toml
crates/readers/rescribe-read-tei/: Cargo.toml
crates/readers/rescribe-read-texinfo/: Cargo.toml
crates/readers/rescribe-read-textile/: Cargo.toml
crates/readers/rescribe-read-tikiwiki/: Cargo.toml
crates/readers/rescribe-read-tsv/: Cargo.toml
crates/readers/rescribe-read-twiki/: Cargo.toml
crates/readers/rescribe-read-typst/: Cargo.toml
crates/readers/rescribe-read-vimwiki/: Cargo.toml
crates/readers/rescribe-read-xlsx/: Cargo.toml
crates/readers/rescribe-read-xlsx/src/: lib.rs
crates/readers/rescribe-read-xwiki/: Cargo.toml
crates/readers/rescribe-read-zimwiki/: Cargo.toml
crates/rescribe/: Cargo.toml
crates/rescribe-cli/: Cargo.toml
crates/rescribe-cli/src/: main.rs
crates/rescribe-core/: Cargo.toml
crates/rescribe-core/src/: document.rs  fidelity.rs  lib.rs  node.rs  properties.rs  resource.rs  traits.rs
crates/rescribe-transforms/: Cargo.toml
crates/rescribe-transforms/src/: lib.rs
crates/rescribe/src/: lib.rs
crates/rescribe/tests/: edge_cases.rs
crates/writers/rescribe-write-ansi/: Cargo.toml
crates/writers/rescribe-write-asciidoc/: Cargo.toml
crates/writers/rescribe-write-bbcode/: Cargo.toml
crates/writers/rescribe-write-beamer/: Cargo.toml
crates/writers/rescribe-write-biblatex/: Cargo.toml
crates/writers/rescribe-write-bibtex/: Cargo.toml
crates/writers/rescribe-write-chunkedhtml/: Cargo.toml
crates/writers/rescribe-write-commonmark/: Cargo.toml
crates/writers/rescribe-write-context/: Cargo.toml
crates/writers/rescribe-write-creole/: Cargo.toml
crates/writers/rescribe-write-csl-json/: Cargo.toml
crates/writers/rescribe-write-csv/: Cargo.toml
crates/writers/rescribe-write-djot/: Cargo.toml
crates/writers/rescribe-write-docbook/: Cargo.toml
crates/writers/rescribe-write-docx/: Cargo.toml
crates/writers/rescribe-write-docx/src/: lib.rs
crates/writers/rescribe-write-dokuwiki/: Cargo.toml
crates/writers/rescribe-write-dzslides/: Cargo.toml
crates/writers/rescribe-write-endnotexml/: Cargo.toml
crates/writers/rescribe-write-epub/: Cargo.toml
crates/writers/rescribe-write-fb2/: Cargo.toml
crates/writers/rescribe-write-fountain/: Cargo.toml
crates/writers/rescribe-write-gfm/: Cargo.toml
crates/writers/rescribe-write-haddock/: Cargo.toml
crates/writers/rescribe-write-html/: Cargo.toml
crates/writers/rescribe-write-icml/: Cargo.toml
crates/writers/rescribe-write-ipynb/: Cargo.toml
crates/writers/rescribe-write-ipynb/src/: lib.rs
crates/writers/rescribe-write-jats/: Cargo.toml
crates/writers/rescribe-write-jira/: Cargo.toml
crates/writers/rescribe-write-latex/: Cargo.toml
crates/writers/rescribe-write-man/: Cargo.toml
crates/writers/rescribe-write-pandoc-json/: Cargo.toml
crates/writers/rescribe-write-pandoc-json/src/: lib.rs
docs/: document-model.md  index.md  introduction.md  package.json
docs/.vitepress/: config.ts
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: html_reader.rs  html_roundtrip.rs  latex_reader.rs  markdown_reader.rs  markdown_roundtrip.rs  org_reader.rs  pandoc_json_reader.rs  pdf_reader.rs
(+149 files in other folders)
