[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
    "crates/rescribe",
    "crates/rescribe-core",
    "crates/nodes/*",
    "crates/readers/*",
    "crates/writers/*",
    "crates/rescribe-transforms",
    "crates/rescribe-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pterror/rescribe"

[workspace.dependencies]
# Internal crates
rescribe-core = { path = "crates/rescribe-core" }
rescribe-std = { path = "crates/nodes/rescribe-std" }
rescribe-math = { path = "crates/nodes/rescribe-math" }
rescribe-read-markdown = { path = "crates/readers/rescribe-read-markdown" }
rescribe-write-markdown = { path = "crates/writers/rescribe-write-markdown" }
rescribe-read-html = { path = "crates/readers/rescribe-read-html" }
rescribe-read-latex = { path = "crates/readers/rescribe-read-latex" }
rescribe-read-org = { path = "crates/readers/rescribe-read-org" }
rescribe-write-html = { path = "crates/writers/rescribe-write-html" }
rescribe-write-plaintext = { path = "crates/writers/rescribe-write-plaintext" }
rescribe-write-latex = { path = "crates/writers/rescribe-write-latex" }
rescribe-write-org = { path = "crates/writers/rescribe-write-org" }
rescribe-read-pandoc-json = { path = "crates/readers/rescribe-read-pandoc-json" }
rescribe-read-pdf = { path = "crates/readers/rescribe-read-pdf" }
rescribe-write-pandoc-json = { path = "crates/writers/rescribe-write-pandoc-json" }
rescribe-transforms = { path = "crates/rescribe-transforms" }
rescribe-read-docx = { path = "crates/readers/rescribe-read-docx" }
rescribe-write-docx = { path = "crates/writers/rescribe-write-docx" }
rescribe-read-ipynb = { path = "crates/readers/rescribe-read-ipynb" }
rescribe-write-ipynb = { path = "crates/writers/rescribe-write-ipynb" }
rescribe-read-xlsx = { path = "crates/readers/rescribe-read-xlsx" }
rescribe-read-epub = { path = "crates/readers/rescribe-read-epub" }
rescribe-write-epub = { path = "crates/writers/rescribe-write-epub" }
rescribe-read-djot = { path = "crates/readers/rescribe-read-djot" }
rescribe-write-djot = { path = "crates/writers/rescribe-write-djot" }
rescribe-read-opml = { path = "crates/readers/rescribe-read-opml" }
rescribe-write-opml = { path = "crates/writers/rescribe-write-opml" }
rescribe-read-mediawiki = { path = "crates/readers/rescribe-read-mediawiki" }
rescribe-write-mediawiki = { path = "crates/writers/rescribe-write-mediawiki" }
rescribe-read-bibtex = { path = "crates/readers/rescribe-read-bibtex" }
rescribe-read-csl-json = { path = "crates/readers/rescribe-read-csl-json" }
rescribe-write-csl-json = { path = "crates/writers/rescribe-write-csl-json" }
rescribe-read-docbook = { path = "crates/readers/rescribe-read-docbook" }
rescribe-write-docbook = { path = "crates/writers/rescribe-write-docbook" }
rescribe-read-rst = { path = "crates/readers/rescribe-read-rst" }
rescribe-read-asciidoc = { path = "crates/readers/rescribe-read-asciidoc" }
rescribe-write-rst = { path = "crates/writers/rescribe-write-rst" }
rescribe-write-asciidoc = { path = "crates/writers/rescribe-write-asciidoc" }
rescribe-write-bibtex = { path = "crates/writers/rescribe-write-bibtex" }

# CLI crate
rescribe = { path = "crates/rescribe" }

# External dependencies
ooxml-wml = { path = "../ooxml/crates/ooxml-wml" }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
html5ever = "0.36"
markup5ever_rcdom = "0.36"
pdf-extract = "0.10"
