[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
    "crates/rescribe",
    "crates/rescribe-core",
    "crates/nodes/*",
    "crates/readers/*",
    "crates/writers/*",
    "crates/rescribe-transforms",
    "crates/rescribe-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pterror/rescribe"

[workspace.dependencies]
# Internal crates
rescribe-core = { path = "crates/rescribe-core" }
rescribe-std = { path = "crates/nodes/rescribe-std" }
rescribe-math = { path = "crates/nodes/rescribe-math" }
rescribe-read-markdown = { path = "crates/readers/rescribe-read-markdown" }
rescribe-write-markdown = { path = "crates/writers/rescribe-write-markdown" }
rescribe-read-html = { path = "crates/readers/rescribe-read-html" }
rescribe-read-latex = { path = "crates/readers/rescribe-read-latex" }
rescribe-read-org = { path = "crates/readers/rescribe-read-org" }
rescribe-write-html = { path = "crates/writers/rescribe-write-html" }
rescribe-write-plaintext = { path = "crates/writers/rescribe-write-plaintext" }
rescribe-write-latex = { path = "crates/writers/rescribe-write-latex" }
rescribe-write-org = { path = "crates/writers/rescribe-write-org" }
rescribe-read-pandoc-json = { path = "crates/readers/rescribe-read-pandoc-json" }
rescribe-read-pdf = { path = "crates/readers/rescribe-read-pdf" }
rescribe-write-pandoc-json = { path = "crates/writers/rescribe-write-pandoc-json" }
rescribe-transforms = { path = "crates/rescribe-transforms" }
rescribe-read-docx = { path = "crates/readers/rescribe-read-docx" }
rescribe-write-docx = { path = "crates/writers/rescribe-write-docx" }
rescribe-read-ipynb = { path = "crates/readers/rescribe-read-ipynb" }
rescribe-write-ipynb = { path = "crates/writers/rescribe-write-ipynb" }
rescribe-read-xlsx = { path = "crates/readers/rescribe-read-xlsx" }
rescribe-read-epub = { path = "crates/readers/rescribe-read-epub" }
rescribe-write-epub = { path = "crates/writers/rescribe-write-epub" }
rescribe-read-djot = { path = "crates/readers/rescribe-read-djot" }
rescribe-write-djot = { path = "crates/writers/rescribe-write-djot" }
rescribe-read-opml = { path = "crates/readers/rescribe-read-opml" }
rescribe-write-opml = { path = "crates/writers/rescribe-write-opml" }
rescribe-read-mediawiki = { path = "crates/readers/rescribe-read-mediawiki" }
rescribe-write-mediawiki = { path = "crates/writers/rescribe-write-mediawiki" }
rescribe-read-bibtex = { path = "crates/readers/rescribe-read-bibtex" }
rescribe-read-csl-json = { path = "crates/readers/rescribe-read-csl-json" }
rescribe-write-csl-json = { path = "crates/writers/rescribe-write-csl-json" }
rescribe-read-docbook = { path = "crates/readers/rescribe-read-docbook" }
rescribe-write-docbook = { path = "crates/writers/rescribe-write-docbook" }
rescribe-read-rst = { path = "crates/readers/rescribe-read-rst" }
rescribe-read-asciidoc = { path = "crates/readers/rescribe-read-asciidoc" }
rescribe-write-rst = { path = "crates/writers/rescribe-write-rst" }
rescribe-write-asciidoc = { path = "crates/writers/rescribe-write-asciidoc" }
rescribe-write-bibtex = { path = "crates/writers/rescribe-write-bibtex" }
rescribe-read-typst = { path = "crates/readers/rescribe-read-typst" }
rescribe-write-typst = { path = "crates/writers/rescribe-write-typst" }
rescribe-write-ansi = { path = "crates/writers/rescribe-write-ansi" }
rescribe-read-dokuwiki = { path = "crates/readers/rescribe-read-dokuwiki" }
rescribe-write-dokuwiki = { path = "crates/writers/rescribe-write-dokuwiki" }
rescribe-read-jats = { path = "crates/readers/rescribe-read-jats" }
rescribe-write-jats = { path = "crates/writers/rescribe-write-jats" }
rescribe-read-tei = { path = "crates/readers/rescribe-read-tei" }
rescribe-write-tei = { path = "crates/writers/rescribe-write-tei" }
rescribe-read-man = { path = "crates/readers/rescribe-read-man" }
rescribe-write-man = { path = "crates/writers/rescribe-write-man" }
rescribe-read-jira = { path = "crates/readers/rescribe-read-jira" }
rescribe-write-jira = { path = "crates/writers/rescribe-write-jira" }
rescribe-read-creole = { path = "crates/readers/rescribe-read-creole" }
rescribe-write-creole = { path = "crates/writers/rescribe-write-creole" }
rescribe-read-textile = { path = "crates/readers/rescribe-read-textile" }
rescribe-write-textile = { path = "crates/writers/rescribe-write-textile" }
rescribe-read-haddock = { path = "crates/readers/rescribe-read-haddock" }
rescribe-write-haddock = { path = "crates/writers/rescribe-write-haddock" }
rescribe-read-muse = { path = "crates/readers/rescribe-read-muse" }
rescribe-write-muse = { path = "crates/writers/rescribe-write-muse" }
rescribe-read-t2t = { path = "crates/readers/rescribe-read-t2t" }
rescribe-write-t2t = { path = "crates/writers/rescribe-write-t2t" }
rescribe-read-rtf = { path = "crates/readers/rescribe-read-rtf" }
rescribe-write-rtf = { path = "crates/writers/rescribe-write-rtf" }
rescribe-read-vimwiki = { path = "crates/readers/rescribe-read-vimwiki" }
rescribe-write-vimwiki = { path = "crates/writers/rescribe-write-vimwiki" }
rescribe-read-zimwiki = { path = "crates/readers/rescribe-read-zimwiki" }
rescribe-write-zimwiki = { path = "crates/writers/rescribe-write-zimwiki" }
rescribe-read-pod = { path = "crates/readers/rescribe-read-pod" }
rescribe-write-pod = { path = "crates/writers/rescribe-write-pod" }
rescribe-read-markua = { path = "crates/readers/rescribe-read-markua" }
rescribe-write-markua = { path = "crates/writers/rescribe-write-markua" }
rescribe-read-fb2 = { path = "crates/readers/rescribe-read-fb2" }
rescribe-write-fb2 = { path = "crates/writers/rescribe-write-fb2" }

# CLI crate
rescribe = { path = "crates/rescribe" }

# External dependencies
ooxml-wml = { path = "../ooxml/crates/ooxml-wml" }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
pulldown-cmark = "0.12"
html5ever = "0.36"
markup5ever_rcdom = "0.36"
pdf-extract = "0.10"
quick-xml = "0.39"
