[package]
name = "rescribe-core"
description = "Core document IR types and traits for rescribe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
