[package]
name = "rescribe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Universal document conversion library with fidelity tracking"
keywords = ["document", "conversion", "pandoc", "markdown", "html"]
categories = ["text-processing", "parser-implementations"]

[features]
default = ["std", "markdown", "html"]

# Node definition crates
std = ["dep:rescribe-std"]
math = ["dep:rescribe-math"]

# Format support
markdown = ["dep:rescribe-read-markdown", "dep:rescribe-write-markdown"]
html = ["dep:rescribe-read-html", "dep:rescribe-write-html"]
latex = ["dep:rescribe-read-latex", "dep:rescribe-write-latex"]
org = ["dep:rescribe-read-org", "dep:rescribe-write-org"]
plaintext = ["dep:rescribe-write-plaintext"]
pdf = ["dep:rescribe-read-pdf"]
docx = ["dep:rescribe-read-docx", "dep:rescribe-write-docx"]
ipynb = ["dep:rescribe-read-ipynb", "dep:rescribe-write-ipynb"]
xlsx = ["dep:rescribe-read-xlsx"]
epub = ["dep:rescribe-read-epub", "dep:rescribe-write-epub"]
djot = ["dep:rescribe-read-djot", "dep:rescribe-write-djot"]
opml = ["dep:rescribe-read-opml", "dep:rescribe-write-opml"]
mediawiki = ["dep:rescribe-read-mediawiki", "dep:rescribe-write-mediawiki"]
bibtex = ["dep:rescribe-read-bibtex", "dep:rescribe-write-bibtex"]
csl-json = ["dep:rescribe-read-csl-json", "dep:rescribe-write-csl-json"]
docbook = ["dep:rescribe-read-docbook", "dep:rescribe-write-docbook"]
rst = ["dep:rescribe-read-rst", "dep:rescribe-write-rst"]
asciidoc = ["dep:rescribe-read-asciidoc", "dep:rescribe-write-asciidoc"]
typst = ["dep:rescribe-read-typst", "dep:rescribe-write-typst"]
ansi = ["dep:rescribe-write-ansi"]
dokuwiki = ["dep:rescribe-read-dokuwiki", "dep:rescribe-write-dokuwiki"]
jats = ["dep:rescribe-read-jats", "dep:rescribe-write-jats"]

# All formats
all = ["std", "math", "markdown", "html", "latex", "org", "plaintext", "pdf", "docx", "ipynb", "xlsx", "epub", "djot", "opml", "mediawiki", "bibtex", "csl-json", "docbook", "rst", "asciidoc", "typst", "ansi", "dokuwiki", "jats"]

[dependencies]
# Core is always included
rescribe-core = { workspace = true }

# Node definitions (optional)
rescribe-std = { workspace = true, optional = true }
rescribe-math = { workspace = true, optional = true }

# Readers (optional)
rescribe-read-markdown = { workspace = true, optional = true }
rescribe-read-html = { workspace = true, optional = true }
rescribe-read-latex = { workspace = true, optional = true }
rescribe-read-org = { workspace = true, optional = true }
rescribe-read-pdf = { workspace = true, optional = true }
rescribe-read-docx = { workspace = true, optional = true }
rescribe-read-ipynb = { workspace = true, optional = true }
rescribe-read-xlsx = { workspace = true, optional = true }
rescribe-read-epub = { workspace = true, optional = true }
rescribe-read-djot = { workspace = true, optional = true }
rescribe-read-opml = { workspace = true, optional = true }
rescribe-read-mediawiki = { workspace = true, optional = true }
rescribe-read-bibtex = { workspace = true, optional = true }
rescribe-read-csl-json = { workspace = true, optional = true }
rescribe-read-docbook = { workspace = true, optional = true }
rescribe-read-rst = { workspace = true, optional = true }
rescribe-read-asciidoc = { workspace = true, optional = true }
rescribe-read-typst = { workspace = true, optional = true }
rescribe-read-dokuwiki = { workspace = true, optional = true }
rescribe-read-jats = { workspace = true, optional = true }

# Writers (optional)
rescribe-write-markdown = { workspace = true, optional = true }
rescribe-write-html = { workspace = true, optional = true }
rescribe-write-latex = { workspace = true, optional = true }
rescribe-write-org = { workspace = true, optional = true }
rescribe-write-plaintext = { workspace = true, optional = true }
rescribe-write-docx = { workspace = true, optional = true }
rescribe-write-ipynb = { workspace = true, optional = true }
rescribe-write-epub = { workspace = true, optional = true }
rescribe-write-djot = { workspace = true, optional = true }
rescribe-write-opml = { workspace = true, optional = true }
rescribe-write-mediawiki = { workspace = true, optional = true }
rescribe-write-csl-json = { workspace = true, optional = true }
rescribe-write-docbook = { workspace = true, optional = true }
rescribe-write-rst = { workspace = true, optional = true }
rescribe-write-asciidoc = { workspace = true, optional = true }
rescribe-write-bibtex = { workspace = true, optional = true }
rescribe-write-typst = { workspace = true, optional = true }
rescribe-write-ansi = { workspace = true, optional = true }
rescribe-write-dokuwiki = { workspace = true, optional = true }
rescribe-write-jats = { workspace = true, optional = true }

[dev-dependencies]
rescribe-read-markdown = { workspace = true }
rescribe-read-html = { workspace = true }
rescribe-write-markdown = { workspace = true }
rescribe-write-html = { workspace = true }
rescribe-std = { workspace = true }
