[package]
name = "rescribe-read-endnotexml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "EndNote XML reader for rescribe"

[dependencies]
rescribe-core = { workspace = true }
rescribe-std = { workspace = true }
quick-xml = { workspace = true }
