[package]
name = "rescribe-read-html"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTML reader for rescribe"

[dependencies]
rescribe-core.workspace = true
rescribe-std.workspace = true
html5ever = "0.36"
markup5ever_rcdom = "0.36"

[dev-dependencies]
rescribe-write-html.workspace = true
