[package]
name = "rescribe-read-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Markdown reader for rescribe"

[dependencies]
rescribe-core.workspace = true
rescribe-std.workspace = true
pulldown-cmark = "0.12"
serde_yaml.workspace = true

[dev-dependencies]
rescribe-write-markdown.workspace = true
rescribe-read-html.workspace = true
rescribe-write-html.workspace = true
