[package]
name = "rescribe-read-multimarkdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MultiMarkdown reader for rescribe"

[dependencies]
rescribe-core = { workspace = true }
rescribe-std = { workspace = true }
pulldown-cmark = { workspace = true }
