[package]
name = "rescribe-read-pandoc-json"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pandoc JSON reader for rescribe"

[dependencies]
rescribe-core.workspace = true
rescribe-std.workspace = true
serde.workspace = true
serde_json.workspace = true
