[package]
name = "rescribe-write-docx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DOCX (Word) writer for rescribe"

[dependencies]
rescribe-core.workspace = true
rescribe-std.workspace = true
ooxml-wml.workspace = true

[dev-dependencies]
